idf_component_register(
    SRCS
        "main.c"
        "motor_control.c"
        "led_handler.c"
        "ble_handler.c"
        "ble_ota.c"
        "icm42688p_sensor.c"
        "dshot_esc.c"
        "flight_ctrl.c"
        "evlog.c"
    INCLUDE_DIRS "."
    REQUIRES 
        driver
        esp_timer
        nvs_flash
        app_update
        bt
        led_strip
)
